--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.9.0",
+    "react-compound-slider": "^2.3.0",
     "react-datepicker": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1"
